# singledigit-cli

./: .lldbinit  CMakeLists.txt  README.md  sudoku_formatter.py
.github/workflows/: build-and-release.yml  build.yml  release.yml
bench/: CMakeLists.txt  bitset_combinations.cpp  generate.cpp
src/: CMakeLists.txt
src/board/: board.cpp  board.hpp  cell.cpp  cell.hpp  cell_set.hpp  cells_view.hpp  constraint_set.cpp  constraint_set.hpp  value_set.cpp
src/board/detail/: bitset_combinations.hpp
src/cli/: CMakeLists.txt  enum.hpp  format.cpp  format.hpp  generate.cpp  generate.hpp  json.cpp  json.hpp  main.cpp  output.cpp  output.hpp  solve.cpp  solve.hpp
src/generator/: generator.cpp
src/lib/: CMakeLists.txt  generator.cpp  generator.hpp  grader.cpp  grader.hpp  solver.cpp  solver.hpp  uniqueness.cpp  uniqueness.hpp
src/lib/board/: board.cpp  board.hpp  cell.cpp  cell.hpp  cell_set.cpp  cell_set.hpp  cells_view.hpp  constraint_set.cpp  constraint_set.hpp  value_set.cpp  value_set.hpp
src/lib/board/detail/: bitset_combinations.hpp
src/lib/strategies/: base_elimination.hpp  basic.cpp  basic.hpp  cell_combination.cpp  cell_combination.hpp  elimination.hpp  fish.cpp  fish.hpp  intersection_removal.cpp  intersection_removal.hpp  strategies.hpp  value_combination.cpp  value_combination.hpp
src/solver/: solver.cpp  solver.hpp
src/strategies/: basic.cpp  basic.hpp  cell_combination.cpp  cell_combination.hpp  elimination.cpp  elimination.hpp  intersection_removal.cpp  intersection_removal.hpp  strategies.hpp  value_combination.cpp
test/: CMakeLists.txt  test_basic_strategy.cpp  test_bitset_combinations.cpp  test_cell.cpp  test_cell_combination.cpp  test_cell_set.cpp  test_cli_generate.cpp  test_complete_board.cpp  test_generator.cpp  test_intersection_removal.cpp  test_solver.cpp  test_value_combination.cpp
test/singledigit_lib/: CMakeLists.txt  eliminations_matcher.hpp  test_basic_strategy.cpp  test_bitset_combinations.cpp  test_board.cpp  test_cell.cpp  test_cell_combination.cpp  test_cell_set.cpp  test_cli.cpp  test_complete_board.cpp  test_fish.cpp  test_generator.cpp  test_intersection_removal.cpp  test_solver.cpp  test_uniqueness.cpp  test_value_combination.cpp  test_value_set.cpp
test/sudokugen_lib/: CMakeLists.txt  test_basic_strategy.cpp  test_generator.cpp  test_solver.cpp  test_uniqueness.cpp  test_value_combination.cpp
