file(GLOB TEST_SOURCES "*.cpp")
foreach (TEST_SOURCE ${TEST_SOURCES})
    get_filename_component(TEST_NAME ${TEST_SOURCE} NAME_WE)
    add_executable(${TEST_NAME} ${TEST_SOURCE})
    target_link_libraries(${TEST_NAME} singledigit_lib gmock gtest gtest_main)
    gtest_discover_tests(${TEST_NAME})
    message(STATUS "Adding test ${TEST_NAME}")
endforeach ()
